Add the Table tag

--- a/index.html
+++ b/index.html
@@ -8,5 +8,12 @@
 </head>
 <body>
     
+    <table border="1" width="900" align="center">
+        <tr>
+            <td>Logo</td>
+            <td>Menu</td>
+        </tr>
+    </table>
+
 </body>
 </html>
