Add logo and links to the table

--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
     
     <table border="1" width="900" align="center">
         <tr>
-            <td>Logo</td>
-            <td>Menu</td>
+            <td><img src="images/logo.png" alt="Logo da universidade"></td>
+            <td align="right">
+                <a href="">Home</a> |
+                <a href="">Quem somos</a> |
+                <a href="">Contato</a> |
+            </td>
         </tr>
     </table>
 
