Add a cover to site

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body background="images/fundo.png">
     
     <table border="1" width="900" align="center">
+        
         <tr>
             <td><img src="images/logo.png" alt="Logo da universidade"></td>
             <td align="right">
@@ -17,6 +18,11 @@
                 <a href="">Contato</a> |
             </td>
         </tr>
+
+        <tr>
+            <td colspan="2"><img src="images/capa.png" alt="Capa do site da universidade"></td>
+        </tr>
+
     </table>
 
 </body>
