Add height in the first row and remove border to the table

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <body background="images/fundo.png">
     
-    <table border="1" width="900" align="center">
+    <table border="0" width="900" align="center">
         
         <tr>
-            <td><img src="images/logo.png" alt="Logo da universidade"></td>
+            <td height="89"><img src="images/logo.png" alt="Logo da universidade"></td>
             <td align="right">
                 <a href="">Home</a> |
                 <a href="">Quem somos</a> |
