Add content to the page

--- a/index.html
+++ b/index.html
@@ -23,6 +23,26 @@
             <td colspan="2"><img src="images/capa.png" alt="Capa do site da universidade"></td>
         </tr>
 
+        <tr>
+            <td colspan="2">
+                <h2>Sobre a universidade</h2>
+                <p>
+                    Lorem <strong> ipsum dolor</strong> sit <em>amet</em> consectetur adipisicing elit. 
+                    Soluta explicabo illum placeat quod necessitatibus assumenda impedit tempore, 
+                    consequuntur quo, perferendis molestiae ab 
+                    at architecto reiciendis officiis, perspiciatis qui nulla eum.
+
+                </p>
+                <p>
+                    Lorem <strong> ipsum dolor</strong> sit <em>amet</em> consectetur adipisicing elit. 
+                    Soluta explicabo illum placeat quod necessitatibus assumenda impedit tempore, 
+                    consequuntur quo, perferendis molestiae ab 
+                    at architecto reiciendis officiis, perspiciatis qui nulla eum.
+
+                </p>
+            </td>
+        </tr>
+
     </table>
 
 </body>
