--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>UNES - Página Principal</title>
 </head>
 <body background="images/fundo.png">
     
@@ -13,8 +13,8 @@
         <tr>
             <td height="89"><img src="images/logo.png" alt="Logo da universidade"></td>
             <td align="right">
-                <a href="">Home</a> |
-                <a href="">Quem somos</a> |
+                <a href="index.html">Home</a> |
+                <a href="quem-somos.html">Quem somos</a> |
                 <a href="">Contato</a> |
             </td>
         </tr>
