--- a/quem-somos.html
+++ b/quem-somos.html
@@ -29,6 +29,20 @@
                     at architecto reiciendis officiis, perspiciatis qui nulla eum.
 
                 </p>
+
+                <h2>5 motivos para estudar</h2>
+                <ol>
+                    <li>Material sempre atualizado</li>
+                    <li>Tablets em sala de aula</li>
+                    <li>Professores renomados</li>
+                    <li>Universidade bem avaliada</li>
+                    <li>Ótima localização</li>
+                </ol>
+
+                <hr>
+                
+                <h2>Obejtivos</h2>
+
                 <p>
                     Lorem <strong> ipsum dolor</strong> sit <em>amet</em> consectetur adipisicing elit. 
                     Soluta explicabo illum placeat quod necessitatibus assumenda impedit tempore, 
