--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <td align="right">
                 <a href="index.html">Home</a> |
                 <a href="quem-somos.html">Quem somos</a> |
-                <a href="">Contato</a> |
+                <a href="contato.html">Contato</a> |
             </td>
         </tr>
 
